# aclicker

./: CMakeLists.txt  LICENSE  README.md
include/: inputsendcore.h
src/: aclicker.cpp  inputsendcore.cpp
